--- a/theme/ceasy/css/style.css
+++ b/theme/ceasy/css/style.css
@@ -1320,7 +1320,11 @@ color: #000000;
 * 7.0 Media Queries
 * --------------------------------------------------------------------
 */
-
+@media (max-width: 767px){
+    .navbar-nav{
+        float: left;
+    }
+}
 @media (max-width: 900px){
     body{
         font-size: 16px
@@ -1354,7 +1358,7 @@ color: #000000;
 
     }
     .navbar-nav{
-        float: none;
+        /*float: none;*/
     }
 
     .sticky-post{
@@ -1766,6 +1770,40 @@ a:active,
  */
 aside.social{margin-top:10px;-webkit-box-sizing:content-box !important;-moz-box-sizing:content-box !important;box-sizing:content-box !important}aside.social *{-webkit-box-sizing:content-box !important;-moz-box-sizing:content-box !important;box-sizing:content-box !important}
 
+/**
+ * Smink menu fix
+ */
+.menu-item-toggle {
+    background-color: transparent;
+    color: #994c92;
+    display: block;
+    float: left;
+    height: auto;
+    line-height: 30px;
+    margin-top: 10px;
+    opacity: 0.5;
+    text-align: center;
+    width: 30px;
+}
+.menu-item > .menu-item-toggle + a {
+    padding-left: 0px;
+    margin-left: 40px;
+}
+
+@media (max-width: 767px) {
+    .dropdown-menu a {
+        padding-left: 40px !important;
+    }
+}
+
+@media (min-width: 1025px) {
+    .menu-item > .menu-item-toggle {
+        display: none;
+    }
+    .menu-item > .menu-item-toggle + a {
+        padding-left: initial;
+    }
+}
 
 /**
  * Boltforms desktop
