--- a/theme/ceasy/partials/_favicon.twig
+++ b/theme/ceasy/partials/_favicon.twig
@@ -19,3 +19,5 @@
 <meta name="msapplication-wide310x150logo" content="{{ asset('/img/favicon/mstile-310x150.png', 'theme') }}" />
 <meta name="msapplication-square310x310logo" content="{{ asset('/img/favicon/mstile-310x310.png', 'theme') }}" />
 <meta name="theme-color" content="#994c92">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="#994c92
