--- a/theme/ceasy/partials/_master.twig
+++ b/theme/ceasy/partials/_master.twig
@@ -8,7 +8,7 @@
 <html class="no-js" lang="{{- htmllang() -}}">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
         <meta name="generator" content="{{ 'Bolt CM ' ~ bolt_version }}">
         <title>{%- block title %}Bemiddeling in ziekteverzuim{% endblock title -%} | CEasy</title>
         <link rel="dns-prefetch' href='//fonts.googleapis.com" />
@@ -21,7 +21,7 @@
             {# Custom #}
             <link href="{{ asset( 'css/style.min.css', 'theme') }}" rel="stylesheet">
         {%- endblock stylesheets -%}
-        {%- include( 'partials/_favicon.twig' ) -%}
+        {%- include( 'partials/_favicon.twig' ) -%}">
     </head>
     <body class="home page page-template-default custom-background">
         <div id="page" class="hfeed site">
