--- a/theme/ceasy/partials/_master.twig
+++ b/theme/ceasy/partials/_master.twig
@@ -20,10 +20,8 @@
         {%- block stylesheets -%}
             {# Latest compiled and minified CSS #}
             <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" async>
-            {# Google Font #}
-            <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet" async>
             {# Custom #}
-            <link href="{{ asset( 'css/style.min.css', 'theme') }}" rel="stylesheet" async>
+            {#<link href="{{ asset( 'css/style.min.css', 'theme') }}" rel="stylesheet" async>#}
         {%- endblock stylesheets -%}
         {%- include( 'partials/_favicon.twig' ) -%}
         {%- block headincludes -%}
@@ -82,4 +80,6 @@
             <script type="text/javascript">window.onload = function(){ stLight.options({publisher: "349a7359-9428-4fb4-bec9-fabfc97cb3ad", doNotHash: false, doNotCopy: false, hashAddressBar: false});}</script>
         {%- endblock javascripts -%}
     </body>
-</html>{%- endspaceless %}
+</html>
+<link href="{{ asset( 'css/style.min.css', 'theme') }}" rel="stylesheet" async>
+{%- endspaceless %}
