--- a/theme/ceasy/splash.twig
+++ b/theme/ceasy/splash.twig
@@ -1,16 +1,14 @@
 {% extends 'partials/_master.twig' %}
 
 {# Set Content #}
-{%- setcontent itemsZ = 'ziekteverzuim' where { categories : 'splash' } limit 1 -%}
-{%- setcontent itemsB = 'bemiddeling' where { categories : 'splash' } limit 1 -%}
-
-{#where { categories = 'splash'}#}
+{%- setcontent largeBlocks = 'ziekteverzuim' where { homepage_blocks : 'large' } limit 1 -%}
+{%- setcontent smallBlocks = 'ziekteverzuim' where { homepage_blocks : 'small' } -%}
 
 {# Body #}
 {% block body -%}
     <div id="primary" class="col-md-12 content-area">
         <main id="main" class="site-main" role="main">
-            {{- block( 'primary' ) -}}
+            {{- block( 'content' ) -}}
         </main>
     </div>
 {%- endblock body %}
@@ -25,38 +23,116 @@
     {{- app.config.get('general/payoff') -}}
 {%- endblock meta_description %}
 
-
 {# Primary #}
-{% block primary -%}
-
-    {% for item in itemsZ %}
-        <div class="col-sm-6 col-xs-12">
-            {{- block( 'splashitem' ) -}}
-        </div>
-    {% endfor %} 
-
-    {% for item in itemsB %}
-        <div class="col-sm-6 col-xs-12">
-            {{- block( 'splashitem' ) -}}
-        </div>
-    {% endfor %}
-{%- endblock primary %}
-
-{# Splashitem #}
-{% block splashitem %}
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title text-center">{{- item.title -}}</h3>
-        </div>
-        {% if item.image is defined %}
-            <div class="panel-body text-center">
-                <img src="{{- thumbnail(item.image, 250, 250) -}}" style="display:inline-block; float: none;">
+{% block content %}
+    <div class="flex-wrapper">
+        {%- for largeBlock in largeBlocks -%}
+            <div class="col-sm-8 col-xs-12 flex-item flex-item-large">
+                {% set item = largeBlock %}
+                {{- block( 'item' ) -}}
             </div>
-        {% endif %}
-        <div class="panel-body text-center">
-            <a class="btn btn-primary" href="{{ item.contenttype.slug ~ '/' ~ item.slug }}">
-                Ga naar dit onderdeel
-            </a>
-        </div>
+        {%- endfor -%}
+        {%- for smallBlock in smallBlocks -%}
+            <div class="col-sm-4 col-xs-12 flex-item flex-item-small">
+                {% set item = smallBlock %}
+                {{- block( 'item' ) -}}
+            </div>
+        {%- endfor -%}
     </div>
-{% endblock splashitem %}
+{% endblock content %}
+
+{# Item #}
+{% block item %}
+    <div class="panel panel-default flex-item-content">
+        <div class="panel-heading">
+            <h3 class="panel-title strong">{{- item.title -}}</h3>
+        </div>
+        <div class="panel-body">
+            <p>{{- item.teaser -}}</p>
+            <a class="btn btn-primary" href="{{ item.contenttype.slug ~ '/' ~ item.slug }}">Lees meer</a>
+        </div>    
+    </div>
+{% endblock item %}
+
+{# Add some styling #}
+{% block stylesheets %}
+    {{- parent() -}}
+    <style>a.btn:visited{color:#fff}.panel-body b, .panel-body strong{font-weight:400}@media screen and (min-width: 768px){.flex-wrapper{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;flex-flow:row wrap}.flex-item-content{height:95%;padding-bottom:40px}a.btn{position:absolute;bottom:40px;right:30px}}@media screen and (min-width: 768px) and (max-width: 1199px){.flex-item{-webkit-box-flex:1 40%;-moz-box-flex:1 40%;-webkit-flex:1 40%;-ms-flex:1 40%;flex:1 40%}.flex-item-large{flex:-webkit-box-flex: 2 60%;-moz-box-flex:2 60%;-webkit-flex:2 60%;-ms-flex:2 60%;flex:2 60%}.flex-item-small{-webkit-box-flex:1 40%;-moz-box-flex:1 40%;-webkit-flex:1 40%;-ms-flex:1 40%;flex:1 40%}}@media screen and (min-width: 1200px){.flex-item{-webkit-box-flex:3 33%;-moz-box-flex:3 33%;-webkit-flex:3 33%;-ms-flex:3 33%;flex:3 33%}.flex-item-large{flex:-webkit-box-flex: 2 50%;-moz-box-flex:2 50%;-webkit-flex:2 50%;-ms-flex:2 50%;flex:2 50%}.flex-item-small{-webkit-box-flex:2 25%;-moz-box-flex:2 25%;-webkit-flex:2 25%;-ms-flex:2 25%;flex:2 25%}}</style>
+{%- endblock stylesheets %}
+
+{#
+        a.btn:visited {
+            color: white;
+        }
+        .panel-body b,
+        .panel-body strong {
+            font-weight: normal;
+        }
+        @media screen and (min-width: 768px) {
+            .flex-wrapper {
+                display: -webkit-box;
+                display: -moz-box;
+                display: -ms-flexbox;
+                display: -webkit-flex;
+                display: flex;
+                flex-flow: row wrap;
+            }
+            .flex-item-content {
+                height: 95%;
+                padding-bottom: 40px;
+            }
+            a.btn {
+                position: absolute;
+                bottom: 40px;
+                right: 30px;
+            }
+        }
+        @media screen and (min-width: 768px) and (max-width: 1199px) {
+            .flex-item {
+                -webkit-box-flex: 1 40%;
+                -moz-box-flex: 1 40%;
+                -webkit-flex: 1 40%;
+                -ms-flex: 1 40%;
+                flex: 1 40%;
+            }
+            .flex-item-large {
+                flex: 
+                -webkit-box-flex: 2 60%;
+                -moz-box-flex: 2 60%;
+                -webkit-flex: 2 60%;
+                -ms-flex: 2 60%;
+                flex: 2 60%;
+            }
+            .flex-item-small {
+                -webkit-box-flex: 1 40%;
+                -moz-box-flex:  1 40%;
+                -webkit-flex:  1 40%;
+                -ms-flex:  1 40%;
+                flex: 1 40%;
+            }
+        }
+        @media screen and (min-width: 1200px) {
+            .flex-item {
+                -webkit-box-flex: 3 33%;
+                -moz-box-flex: 3 33%;
+                -webkit-flex: 3 33%;
+                -ms-flex: 3 33%;
+                flex: 3 33%;
+            }
+            .flex-item-large {
+                flex: 
+                -webkit-box-flex: 2 50%;
+                -moz-box-flex: 2 50%;
+                -webkit-flex: 2 50%;
+                -ms-flex: 2 50%;
+                flex: 2 50%;
+            }
+            .flex-item-small {
+                -webkit-box-flex: 2 25%;
+                -moz-box-flex:  2 25%;
+                -webkit-flex:  2 25%;
+                -ms-flex:  2 25%;
+                flex:  2 25%;
+            }
+        }
+#}
